Fix link overflow

--- a/wp-content/themes/theme_purdy/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/theme_purdy/resources/assets/styles/layouts/_header.scss
@@ -128,6 +128,7 @@ nav {
             align-items:center;
             a {
                 text-indent:-999px;
+                overflow:hidden;
             }
             &:after {
                content:'';
